--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1{
+            color: cadetblue;
+            font-size: 42px;
+        }
+        p{
+            color: red;
+            font-size: 12px;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>So slow</h1>
+    <p>like a snail</p>
 </body>
 </html>
