--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     </style>
 </head>
 <body>
+    <nav>
+        <div class="logo"><img src="https://picsum.photos/50/30/?random=10"></div>
+        <ul>
+            <li>首頁</li>
+            <li>關於我們</li>
+        </ul>
+    </nav>
     <h1>So slow</h1>
     <p>like a snail</p>
 </body>
