--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
             color: red;
             font-size: 12px;
         }
+        nav{
+            display: flex;
+            justify-content: between;
+            padding: 5px;
+            text-decoration: none;
+        }
+        li{
+            margin-left: 10px;
+        }
     </style>
 </head>
 <body>
